test/corpus/e2e.txt
==================
e2e: precedence
==================

print(1 + 2 * 3); // expect: 7
print((1 + 2) * 3); // expect: 9
print(10 - 2 - 3); // expect: 5
print(2 + 3 * 4); // expect: 14

---

(source_file
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (binary_expr
          (number_expr)
          (number_expr)))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (grouping_expr
          (binary_expr
            (number_expr)
            (number_expr)))
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (binary_expr
          (number_expr)
          (number_expr))
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (binary_expr
          (number_expr)
          (number_expr)))))
  (line_comment))

==================
e2e: assignment
==================

glob let mut x = 0;

let a = (x = 69);

print(a); // expect: 69
print(x); // expect: 69

---

(source_file
  (let_decl
    (binding
      (ident))
    (number_expr))
  (let_decl
    (binding
      (ident))
    (grouping_expr
      (assignment_expr
        (lvalue_expr
          (ident))
        (number_expr))))
  (print_stmt
    (grouping_expr
      (ident)))
  (line_comment)
  (print_stmt
    (grouping_expr
      (ident)))
  (line_comment))

==================
e2e: comparison
==================

print(1 < 2); // expect: true
print(2 < 1); // expect: false
print(2 > 1); // expect: true
print(1 > 2); // expect: false
print(1 <= 1); // expect: true
print(2 >= 3); // expect: false

---

(source_file
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment))

==================
e2e: unary
==================

print(-10); // expect: -10
print(!false); // expect: true

---

(source_file
  (print_stmt
    (grouping_expr
      (unary_expr
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (unary_expr
        (false_expr))))
  (line_comment))

==================
e2e: chain
==================

print 1 + 2 + 3 + 4 + 5; // expect: 15

---

(source_file
  (print_stmt
    (binary_expr
      (binary_expr
        (binary_expr
          (binary_expr
            (number_expr)
            (number_expr))
          (number_expr))
        (number_expr))
      (number_expr)))
  (line_comment))

==================
e2e: equality
==================

print(1 == 1); // expect: true
print(1 == 2); // expect: false
print(1 != 2); // expect: true
print(1 != 1); // expect: false

---

(source_file
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment))

==================
e2e: grouping
==================

print((1 + 2) * (3 + 2)); // expect: 15
print((1 + 2 + 3) * 3); // expect: 18

---

(source_file
  (print_stmt
    (grouping_expr
      (binary_expr
        (grouping_expr
          (binary_expr
            (number_expr)
            (number_expr)))
        (grouping_expr
          (binary_expr
            (number_expr)
            (number_expr))))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (grouping_expr
          (binary_expr
            (binary_expr
              (number_expr)
              (number_expr))
            (number_expr)))
        (number_expr))))
  (line_comment))

==================
e2e: mixed
==================

print(1 + 2 * 3 == 7); // expect: true
print((1 + 2) * 3 == 10); // expect: false

---

(source_file
  (print_stmt
    (grouping_expr
      (binary_expr
        (binary_expr
          (number_expr)
          (binary_expr
            (number_expr)
            (number_expr)))
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (binary_expr
          (grouping_expr
            (binary_expr
              (number_expr)
              (number_expr)))
          (number_expr))
        (number_expr))))
  (line_comment))

==================
e2e: arithmetic
==================

print(1 + 2); // expect: 3
print(2 - 1); // expect: 1
print(2 * 3); // expect: 6
print(6 / 3); // expect: 2

---

(source_file
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment)
  (print_stmt
    (grouping_expr
      (binary_expr
        (number_expr)
        (number_expr))))
  (line_comment))

==================
e2e: if_false
==================

if false? print "damn!";
print "phew"; // expect: phew

---

(source_file
  (if_stmt
    (false_expr)
    (print_stmt
      (string_expr
        (double_quoted_string))))
  (print_stmt
    (string_expr
      (double_quoted_string)))
  (line_comment))

==================
e2e: nested_if
==================

if true? if true? print "opposingfork"; // expect: opposingfork

---

(source_file
  (if_stmt
    (true_expr)
    (if_stmt
      (true_expr)
      (print_stmt
        (string_expr
          (double_quoted_string)))))
  (line_comment))

==================
e2e: if_true
==================

if true? print("yes"); // expect: yes

---

(source_file
  (if_stmt
    (true_expr)
    (print_stmt
      (grouping_expr
        (string_expr
          (double_quoted_string)))))
  (line_comment))

==================
e2e: if_else
==================

if false? print "yes"; else? print "no"; // expect: no

---

(source_file
  (if_stmt
    (false_expr)
    (print_stmt
      (string_expr
        (double_quoted_string)))
    (print_stmt
      (string_expr
        (double_quoted_string))))
  (line_comment))

==================
e2e: branching
==================

if true? print "opposing"; else print "fork"; // expect: opposing
if false? print "opposing"; else? print "fork"; // expect: fork

---

(source_file
  (if_stmt
    (true_expr)
    (print_stmt
      (string_expr
        (double_quoted_string)))
    (print_stmt
      (string_expr
        (double_quoted_string))))
  (line_comment)
  (if_stmt
    (false_expr)
    (print_stmt
      (string_expr
        (double_quoted_string)))
    (print_stmt
      (string_expr
        (double_quoted_string))))
  (line_comment))

==================
e2e: expression_in_if
==================

let qais = "cool";
if qais == "cool"? {
  print "qais is cool!"; // expect: qais is cool!
} else print "qais is a bum!"; // better be working!

if 22 == 22? print 'yeh'; // expect: yeh
if 67 < 69? print 'also by age'; // expect: also by age

---

(source_file
  (let_decl
    (binding
      (ident))
    (string_expr
      (double_quoted_string)))
  (if_stmt
    (binary_expr
      (ident)
      (string_expr
        (double_quoted_string)))
    (compound_stmt
      (print_stmt
        (string_expr
          (double_quoted_string)))
      (line_comment))
    (print_stmt
      (string_expr
        (double_quoted_string))))
  (line_comment)
  (if_stmt
    (binary_expr
      (number_expr)
      (number_expr))
    (print_stmt
      (string_expr
        (single_quoted_string))))
  (line_comment)
  (if_stmt
    (binary_expr
      (number_expr)
      (number_expr))
    (print_stmt
      (string_expr
        (single_quoted_string))))
  (line_comment))

==================
e2e: if_else_if
==================

if false? print 67; else if false? print "no"; else print "yeh!"; // expect: yeh!

---

(source_file
  (if_stmt
    (false_expr)
    (print_stmt
      (number_expr))
    (if_stmt
      (false_expr)
      (print_stmt
        (string_expr
          (double_quoted_string)))
      (print_stmt
        (string_expr
          (double_quoted_string)))))
  (line_comment))

==================
e2e: nested_break
==================

for let mut i = 0; i < 2; i = i + 1? {
    print("outer");

    for let mut j = 0; j < 2; j = j + 1? {
        print("inner");
        break;
    }

    print("after-inner");
}

// expect: outer
// expect: inner
// expect: after-inner
// expect: outer
// expect: inner
// expect: after-inner

---

(source_file
  (for_stmt
    (let_decl
      (binding
        (ident))
      (number_expr))
    (binary_expr
      (ident)
      (number_expr))
    (assignment_expr
      (lvalue_expr
        (ident))
      (binary_expr
        (ident)
        (number_expr)))
    (compound_stmt
      (print_stmt
        (grouping_expr
          (string_expr
            (double_quoted_string))))
      (for_stmt
        (let_decl
          (binding
            (ident))
          (number_expr))
        (binary_expr
          (ident)
          (number_expr))
        (assignment_expr
          (lvalue_expr
            (ident))
          (binary_expr
            (ident)
            (number_expr)))
        (compound_stmt
          (print_stmt
            (grouping_expr
              (string_expr
                (double_quoted_string))))
          (break_stmt)))
      (print_stmt
        (grouping_expr
          (string_expr
            (double_quoted_string))))))
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment))

==================
e2e: break
==================

for let mut i = 0; i < 10; i = i + 1? {
    if i == 2 ? break;
    print(i);
}

print("done");

// expect: 0
// expect: 1
// expect: done


---

(source_file
  (for_stmt
    (let_decl
      (binding
        (ident))
      (number_expr))
    (binary_expr
      (ident)
      (number_expr))
    (assignment_expr
      (lvalue_expr
        (ident))
      (binary_expr
        (ident)
        (number_expr)))
    (compound_stmt
      (if_stmt
        (binary_expr
          (ident)
          (number_expr))
        (break_stmt))
      (print_stmt
        (grouping_expr
          (ident)))))
  (print_stmt
    (grouping_expr
      (string_expr
        (double_quoted_string))))
  (line_comment)
  (line_comment)
  (line_comment))

==================
e2e: basic
==================

for let mut i = 0; i < 3; i = i + 1? {
  print i;
}
// expect: 0
// expect: 1
// expect: 2

---

(source_file
  (for_stmt
    (let_decl
      (binding
        (ident))
      (number_expr))
    (binary_expr
      (ident)
      (number_expr))
    (assignment_expr
      (lvalue_expr
        (ident))
      (binary_expr
        (ident)
        (number_expr)))
    (compound_stmt
      (print_stmt
        (ident))))
  (line_comment)
  (line_comment)
  (line_comment))

==================
e2e: nested
==================

for let mut i = 0; i < 2; i = i + 1? {
    for let mut j = 0; j < 3; j = j + 1? {
        print(i);
        print(j);
    }
}

// expect: 0
// expect: 0
// expect: 0
// expect: 1
// expect: 0
// expect: 2
// expect: 1
// expect: 0
// expect: 1
// expect: 1
// expect: 1
// expect: 2

---

(source_file
  (for_stmt
    (let_decl
      (binding
        (ident))
      (number_expr))
    (binary_expr
      (ident)
      (number_expr))
    (assignment_expr
      (lvalue_expr
        (ident))
      (binary_expr
        (ident)
        (number_expr)))
    (compound_stmt
      (for_stmt
        (let_decl
          (binding
            (ident))
          (number_expr))
        (binary_expr
          (ident)
          (number_expr))
        (assignment_expr
          (lvalue_expr
            (ident))
          (binary_expr
            (ident)
            (number_expr)))
        (compound_stmt
          (print_stmt
            (grouping_expr
              (ident)))
          (print_stmt
            (grouping_expr
              (ident)))))))
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment))

==================
e2e: one_iter
==================

for let mut x = 0; x < 1; x = x + 1? {
  print x;
}
// expect: 0

---

(source_file
  (for_stmt
    (let_decl
      (binding
        (ident))
      (number_expr))
    (binary_expr
      (ident)
      (number_expr))
    (assignment_expr
      (lvalue_expr
        (ident))
      (binary_expr
        (ident)
        (number_expr)))
    (compound_stmt
      (print_stmt
        (ident))))
  (line_comment))

==================
e2e: mutable
==================

let mut x = 0;
for let mut i = 0; i < 3; i = i + 1? {
    x = x + 1;
    print(x);
}
// expect: 1
// expect: 2
// expect: 3

---

(source_file
  (let_decl
    (binding
      (ident))
    (number_expr))
  (for_stmt
    (let_decl
      (binding
        (ident))
      (number_expr))
    (binary_expr
      (ident)
      (number_expr))
    (assignment_expr
      (lvalue_expr
        (ident))
      (binary_expr
        (ident)
        (number_expr)))
    (compound_stmt
      (expr_stmt
        (assignment_expr
          (lvalue_expr
            (ident))
          (binary_expr
            (ident)
            (number_expr))))
      (print_stmt
        (grouping_expr
          (ident)))))
  (line_comment)
  (line_comment)
  (line_comment))

==================
e2e: nested_continue
==================

for let mut i = 0; i < 2; i = i + 1? {
    print("outer");
    print(i);

    for let mut j = 0; j < 3; j = j + 1? {
        if j == 1 ? continue;
        print("inner");
	print(j);
    }
}

// expect: outer
// expect: 0
// expect: inner
// expect: 0
// expect: inner
// expect: 2
// expect: outer
// expect: 1
// expect: inner
// expect: 0
// expect: inner
// expect: 2

---

(source_file
  (for_stmt
    (let_decl
      (binding
        (ident))
      (number_expr))
    (binary_expr
      (ident)
      (number_expr))
    (assignment_expr
      (lvalue_expr
        (ident))
      (binary_expr
        (ident)
        (number_expr)))
    (compound_stmt
      (print_stmt
        (grouping_expr
          (string_expr
            (double_quoted_string))))
      (print_stmt
        (grouping_expr
          (ident)))
      (for_stmt
        (let_decl
          (binding
            (ident))
          (number_expr))
        (binary_expr
          (ident)
          (number_expr))
        (assignment_expr
          (lvalue_expr
            (ident))
          (binary_expr
            (ident)
            (number_expr)))
        (compound_stmt
          (if_stmt
            (binary_expr
              (ident)
              (number_expr))
            (continue_stmt))
          (print_stmt
            (grouping_expr
              (string_expr
                (double_quoted_string))))
          (print_stmt
            (grouping_expr
              (ident)))))))
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment))

==================
e2e: continue
==================

for let mut i = 0; i < 5; i = i + 1? {
    if i == 1 ? continue;
    if i == 3 ? continue;

    print(i);
}

print("done");

// expect: 0
// expect: 2
// expect: 4
// expect: done

---

(source_file
  (for_stmt
    (let_decl
      (binding
        (ident))
      (number_expr))
    (binary_expr
      (ident)
      (number_expr))
    (assignment_expr
      (lvalue_expr
        (ident))
      (binary_expr
        (ident)
        (number_expr)))
    (compound_stmt
      (if_stmt
        (binary_expr
          (ident)
          (number_expr))
        (continue_stmt))
      (if_stmt
        (binary_expr
          (ident)
          (number_expr))
        (continue_stmt))
      (print_stmt
        (grouping_expr
          (ident)))))
  (print_stmt
    (grouping_expr
      (string_expr
        (double_quoted_string))))
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment))

==================
e2e: zero_iter
==================

for let i = 0; i > 0; ? print(i);

print "nothing"; // expect: nothing

---

(source_file
  (for_stmt
    (let_decl
      (binding
        (ident))
      (number_expr))
    (binary_expr
      (ident)
      (number_expr))
    (print_stmt
      (grouping_expr
        (ident))))
  (print_stmt
    (string_expr
      (double_quoted_string)))
  (line_comment))

==================
e2e: nested_break
==================

let mut i = 0;

while i < 2? {
    print("outer");

    let mut j = 0;

    while j < 2? {
        print("inner");
        break;
    }

    print("after-inner");
    i = i + 1;
}

// expect: outer
// expect: inner
// expect: after-inner
// expect: outer
// expect: inner
// expect: after-inner

---

(source_file
  (let_decl
    (binding
      (ident))
    (number_expr))
  (while_stmt
    (binary_expr
      (ident)
      (number_expr))
    (compound_stmt
      (print_stmt
        (grouping_expr
          (string_expr
            (double_quoted_string))))
      (let_decl
        (binding
          (ident))
        (number_expr))
      (while_stmt
        (binary_expr
          (ident)
          (number_expr))
        (compound_stmt
          (print_stmt
            (grouping_expr
              (string_expr
                (double_quoted_string))))
          (break_stmt)))
      (print_stmt
        (grouping_expr
          (string_expr
            (double_quoted_string))))
      (expr_stmt
        (assignment_expr
          (lvalue_expr
            (ident))
          (binary_expr
            (ident)
            (number_expr))))))
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment))

==================
e2e: break
==================

let mut i = 0;

while i < 10? {
    if i == 2 ? break;

    print(i);
    i = i + 1;
}

print("done");

// expect: 0
// expect: 1
// expect: done

---

(source_file
  (let_decl
    (binding
      (ident))
    (number_expr))
  (while_stmt
    (binary_expr
      (ident)
      (number_expr))
    (compound_stmt
      (if_stmt
        (binary_expr
          (ident)
          (number_expr))
        (break_stmt))
      (print_stmt
        (grouping_expr
          (ident)))
      (expr_stmt
        (assignment_expr
          (lvalue_expr
            (ident))
          (binary_expr
            (ident)
            (number_expr))))))
  (print_stmt
    (grouping_expr
      (string_expr
        (double_quoted_string))))
  (line_comment)
  (line_comment)
  (line_comment))

==================
e2e: basic
==================

let mut i = 0;
while i < 3? {
  print i;
  i = i + 1;
}

// expect: 0
// expect: 1
// expect: 2

---

(source_file
  (let_decl
    (binding
      (ident))
    (number_expr))
  (while_stmt
    (binary_expr
      (ident)
      (number_expr))
    (compound_stmt
      (print_stmt
        (ident))
      (expr_stmt
        (assignment_expr
          (lvalue_expr
            (ident))
          (binary_expr
            (ident)
            (number_expr))))))
  (line_comment)
  (line_comment)
  (line_comment))

==================
e2e: nested
==================

let mut i = 0;

while i < 2? {
    let mut j = 0;

    while j < 3? {
        print(i);
        j = j + 1;
    }

    i = i + 1;
}

// expect: 0
// expect: 0
// expect: 0
// expect: 1
// expect: 1
// expect: 1

---

(source_file
  (let_decl
    (binding
      (ident))
    (number_expr))
  (while_stmt
    (binary_expr
      (ident)
      (number_expr))
    (compound_stmt
      (let_decl
        (binding
          (ident))
        (number_expr))
      (while_stmt
        (binary_expr
          (ident)
          (number_expr))
        (compound_stmt
          (print_stmt
            (grouping_expr
              (ident)))
          (expr_stmt
            (assignment_expr
              (lvalue_expr
                (ident))
              (binary_expr
                (ident)
                (number_expr))))))
      (expr_stmt
        (assignment_expr
          (lvalue_expr
            (ident))
          (binary_expr
            (ident)
            (number_expr))))))
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment))

==================
e2e: one_iter
==================

let mut i = 0;
while i < 1? {
  print i;
  i = i + 1;
}
// expect: 0

---

(source_file
  (let_decl
    (binding
      (ident))
    (number_expr))
  (while_stmt
    (binary_expr
      (ident)
      (number_expr))
    (compound_stmt
      (print_stmt
        (ident))
      (expr_stmt
        (assignment_expr
          (lvalue_expr
            (ident))
          (binary_expr
            (ident)
            (number_expr))))))
  (line_comment))

==================
e2e: mutable
==================

let mut i = 0;

while i < 3? {
    i = i + 1;
    print(i);
}

// expect: 1
// expect: 2
// expect: 3

---

(source_file
  (let_decl
    (binding
      (ident))
    (number_expr))
  (while_stmt
    (binary_expr
      (ident)
      (number_expr))
    (compound_stmt
      (expr_stmt
        (assignment_expr
          (lvalue_expr
            (ident))
          (binary_expr
            (ident)
            (number_expr))))
      (print_stmt
        (grouping_expr
          (ident)))))
  (line_comment)
  (line_comment)
  (line_comment))

==================
e2e: continue
==================

let mut i = 0;

while i < 5? {
    if i == 1? {
        i = i + 1;
        continue;
    }

    if i == 3? {
        i = i + 1;
        continue;
    }

    print(i);
    i = i + 1;
}

print("done");
